#2808 - fix 3W sizes            - fix popup container overflow

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/widget/popup/popup-embed.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/widget/popup/popup-embed.css
@@ -67,4 +67,5 @@ a:focus,
   width: 100%;
   max-width: 1110px;
   max-height: 502px;
+  overflow: auto;
 }
